--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-digraph": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
